# ImageWatch

./: CMakeLists.txt  LICENSE  README.md  changelog.md
src/eunit/emat/: emat_core.hpp  emat_init.hpp  emat_omp.hpp  emat_viewer.hpp  emat_visual.hpp
test/viewer/: test_image.cpp  test_video_capture.cpp
